syntax = "proto3";

option go_package = "proto/cman";

package cman;

/*
    subject:

    cn.xswitch.ctrl.cman
*/

service cMan {
  // 获取会议列表
  rpc getConferenceList(GetConferenceListRequest) returns (GetConferenceListResponse) {}
  // 获取会议信息
  rpc conferenceInfo(ConferenceInfoRequest) returns (ConferenceInfoResponse) {}
  // bootstrap 客户端侧冷启动时发送，刷新当前会议状态和成员列表
  rpc bootstrap(BootstrapRequest) returns (BootstrapResponse) {}
  // getNodeForConference 小会参会者入会前询问小会所在节点
  rpc getNodeForConference(getNodeForConferenceRequest) returns (getNodeForConferenceResponse) {}
  // confControl 通用的会控接口
  rpc confControl(confControlRequest) returns (confControlResponse) {}
  // 推送主会场。主会场推送给全体参会人员
  rpc pushMain(pushMainRequest) returns (pushMainResponse) {}
  // 推送合屏。指定一部分参会者合成一屏推送给全体参会人员，当前版本API，这些参会者必须在同一个节点上。
  rpc pushSubCanvas(pushSubCanvasRequest) returns (pushSubCanvasResponse) {}
  // 主会场单看。指定一部分参会者合成一屏单独推送给主会场，当前版本API，这些参会者必须在同一个节点上；除了主会场外的其他参会人员看主会场。
  rpc pushMainSubCanvas(pushMainSubCanvasRequest) returns (pushMainSubCanvasResponse) {}
  // 推送整体。指定一部分参会者跟主会场一起推送给所有人，当前版本API，这些参会者必须在同一个节点上。
  rpc pushWhole(pushWholeRequest) returns (pushWholeResponse) {}
  // 轮播指定的参会者，当前版本API，这些参会者必须在同一个节点上。
  rpc loopSome(loopSomeRequest) returns (loopSomeResponse) {}
}

message ConferenceInfoRequest {
  string name = 1;
  bool showMembers = 2;
  map<string, string> memberFilters = 3;
}

message ConferenceInfoResponse {
  ConferenceInfoResponseConference conference = 1;
}

message ConferenceInfoResponseConference{
  string name = 1;
  string domain = 2;
  repeated ConferenceInfoResponseConferenceNodes nodes = 3;
  int32 size = 4;
  int32 member_count = 5;
  string states = 6;
  repeated ConferenceInfoResponseConferenceMembers members = 7;
}

message ConferenceInfoResponseConferenceNodes{
  string nodeUUID = 1;
  int32 confMemberCount = 2;
  int32 size = 3;
  repeated ConferenceInfoResponseConferenceNodesGroupMembers GroupMembers = 4;
  string confCreatTime = 5;
  string confUUID = 6;
  string nodeType = 7;
  string localIP = 8;
  ConferenceInfoResponseConferenceNodesNodeMembers nodeMembers = 9;
  string moderatorMemberID = 10;
  string destNumber = 11;
  string action = 12;
  string state = 13;
  string lastUpdated = 14;
  int32 port = 15;
}

message ConferenceInfoResponseConferenceNodesGroupMembers{
  string groupID = 1;
  int32 count = 2;
}

message ConferenceInfoResponseConferenceNodesNodeMembers{
}

message ConferenceInfoResponseConferenceMembers{
  string memberID = 1;
  string cidNumber = 2;
  string cidName = 3;
  string codec = 4;
  ConferenceInfoResponseConferenceMembersStatus status = 5;
  string email = 6;
  string nodeUUID = 7;
  bool active = 8;
  string uuid = 9;
  string groupID = 10;
  string memberType = 11;
  string nodeType = 12;
  string domain = 13;
  int32 canvasID = 14;
  int32 watchingCanvasID = 15;
  string roleID = 16;
  int32 layerID = 17;
  string reservationID = 18;
  string channelName = 19;
}

message ConferenceInfoResponseConferenceMembersStatus{
  ConferenceInfoResponseConferenceMembersStatusAudio audio = 1;
  ConferenceInfoResponseConferenceMembersStatusVideo video = 2;
}

message ConferenceInfoResponseConferenceMembersStatusAudio{
  bool talking = 1;
  bool deaf = 2;
  bool muted = 3;
  bool onHold = 4;
  int32 energyScore = 5;
  bool floor = 6;
}

message ConferenceInfoResponseConferenceMembersStatusVideo{
  bool visible = 1;
  bool noRecover = 2;
  bool avatarPresented = 3;
  bool mediaFlow = 4;
  bool muted = 5;
  bool floor = 6;
  string reservationID = 7;
  string roleID = 8;
  int32 videoLayerID = 9;
  int32 canvasID = 10;
  int32 watchingCanvasID = 11;
  int32 order = 12;
}

message ConferenceInfoResponseVariables {
}

message ConferenceInfoResponseMembers {
  string type = 1;
  int32 id = 2;
  string uuid = 3;
  string caller_id_name = 4;
  string caller_id_number = 5;
  int32 join_time = 6;
  int32 last_talking = 7;
  int32 energy = 8;
  int32 volume_in = 9;
  int32 volume_out = 10;
  int32 output_volume = 11;
  int32 input_volume = 12;
  ConferenceInfoResponseFlags flags = 13;
}

message ConferenceInfoResponseFlags {
  bool can_hear = 1;
  bool can_see = 2;
  bool can_speak = 3;
  bool hold = 4;
  bool mute_detect = 5;
  bool talking = 6;
  bool has_video = 7;
  bool video_bridge = 8;
  bool has_floor = 9;
  bool is_moderator = 10;
  bool end_conference = 11;
}

message GetConferenceListRequest {
}

message ConferenceObjectNodesGroupMembers{
}
message ConferenceObjectNodesNodeMembers{
}
message ConferenceObjectNodes{
  string nodeUUID = 1;
  int32 confMemberCount = 2;
  int32 size = 3;
  repeated ConferenceObjectNodesGroupMembers groupMembers = 4;
  string confCreatedTime = 5;
  string confUUID = 6;
  string localIP = 7;
  repeated ConferenceObjectNodesNodeMembers nodeMembers = 8;
  string moderatorMemberID = 9;
  string destNumber = 10;
  string action = 11;
  string state = 12;
  string lastUpdated = 13;
}

message ConferenceObject {
  string name = 1;
  string domain = 2;
  repeated ConferenceObjectNodes nodes = 3;
  int32 size = 4;
  string memberCount = 5;
  string state = 6;
}

message GetConferenceListResponse {
  repeated ConferenceObject conferences = 1;
}

message BootstrapRequest{
  string event_channel = 1;
  BootstrapRequestParamsData data = 2;
  string sessid = 3;
}

message BootstrapRequestParamsData{
  BootstrapRequestParamsDataLiveArray live_array = 1;
}

message BootstrapRequestParamsDataLiveArray{
  string command = 1;
  string context = 2;
  string name = 3;
  BootstrapRequestParamsDataLiveArrayObj obj = 4;
}

message BootstrapRequestParamsDataLiveArrayObj{
}

message BootstrapResponse{
  string event_channel = 1;
  string sessid = 2;
  BootstrapResponseParamsData data = 3;
}

message BootstrapResponseParamsData{
  string action = 1;
  string name = 2;
  bytes data = 3;
  int32 wire_serno = 4;
  BootstrapResponseParamsDataConfInfo conf_info = 5;
}

message BootstrapResponseParamsDataConfInfo{
  int32  size = 1;
  BootstrapResponseParamsDataConfInfoGroupMembers group_members = 2;
}

message BootstrapResponseParamsDataConfInfoGroupMembers{
  int32 no_group = 1;
}

message getNodeForConferenceRequest{
  string name = 1;
}

message getNodeForConferenceResponse{
  string nodeUUID = 1;
}

message confControlRequest{
  string command = 1;
  string conferenceName = 2;
  string nodeUUID = 3;
  string memberID = 4;
  string value = 5;
}

message confControlResponse{
}

message pushMainRequest{
  string command = 1;
  string conference_name = 2;
  string nodeUUID = 3;
  int32 stream = 4;
}

message pushMainResponse{
}

message pushSubCanvasRequest{
  string command = 1;
  string conference_name = 2;
  string nodeUUID = 3;
  string layout = 4;
  repeated pushSubCanvasRequestMembers members = 5;
}

message pushSubCanvasRequestMembers{
  string memberID = 1;
  string position = 2;
  string nodeUUID = 3;
}

message pushSubCanvasResponse{
}

message pushMainSubCanvasRequest{
  string command = 1;
  string conference_name = 2;
  string nodeUUID = 3;
  string layout = 4;
  repeated pushMainSubCanvasRequestMembers members = 5;
}

message pushMainSubCanvasRequestMembers{
  string memberID = 1;
  string position = 2;
  string nodeUUID = 3;
}

message pushMainSubCanvasResponse{
}

message pushWholeRequest{
  string command = 1;
  string conference_name = 2;
  string nodeUUID = 3;
  string layout = 4;
  repeated pushWholeRequestMembers members = 5;
}

message pushWholeRequestMembers{
  string memberID = 1;
  string position = 2;
  string nodeUUID = 3;
}

message pushWholeResponse{
}

message loopSomeRequest{
  string command = 1;
  string conference_name = 2;
  string interval = 3;
  string layout = 4;
  repeated loopSomeRequestMembers members = 5;
}

message loopSomeRequestMembers{
  string memberID = 1;
  string nodeUUID = 2;
}

message loopSomeResponse{
}